# CaRM

./: .buildinfo  .gitignore  LICENSE  README.md  about.html  carm.html  carm.initial_conditions.html  carm.properties.html  carm.simulation.html  carm.thermal_interference.html  discretization.html  fls_methods.html  fluid_properties.html  genindex.html  index.html  modules.html  objects.inv  output.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/workflows/: docs.yml
_modules/: index.html
_modules/carm/: external_environment.html  field_layout.html  fluid.html  model.html  state.html
_sources/: carm.initial_conditions.rst.txt  carm.properties.rst.txt  carm.simulation.rst.txt  discretization.rst.txt  index.rst.txt  output.rst.txt
carm/: __init__.py  external_environment.py  field_layout.py  fluid.py  model.py  state.py
carm/initial_conditions/: __init__.py  kusuda.py
carm/matrix/: BheMatrix.py  __init__.py  assembly.py
carm/properties/: __init__.py  borehole.py  ground.py  soil_moisture.py
carm/simulation/: __init__.py  solver.py
carm/thermal_interference/: __init__.py  fls.py
docs/source/: about.rst  carm.rst  carm.thermal_interference.rst  conf.py  fls_methods.rst  (+5 more)
examples/: Coaxial.py  DoubleUtube.py  Helical.py  SingleUtube.py  SingleUtube_Multiborehole_parallel.ipynb  SingleUtube_Multiborehole_series.ipynb  SingleUtube_multi_parallel.py  SingleUtube_multi_parallel_varprops.py  SingleUtube_multi_series.py  input_env.xlsx  spacing.xlsx
tests/: test_external_environment.py  test_field.py  test_state.py
(+14 files in other folders)
